@@ -3,14 +3,14 @@ package com.wrenchit.api.config;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
 
-public class KcRoleConverter
-        implements Converter<Jwt, Collection<GrantedAuthority>> {
+public class KcRoleConverter implements Converter<Jwt, Collection<GrantedAuthority>> {
 
     @Override
     public Collection<GrantedAuthority> convert(Jwt jwt) {
@@ -27,8 +27,10 @@ public class KcRoleConverter
 
         return roles.stream()
                 .filter(String.class::isInstance)
+                .map(String.class::cast)
                 .map(role -> "ROLE_" + role)
                 .map(SimpleGrantedAuthority::new)
-                .toList();
+                .map(ga -> (GrantedAuthority) ga)
+                .collect(Collectors.toList());
     }
 }
